@@ -1,3 +1,8 @@
+2007-06-28  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
+	* Tomboy/SyncManager.cs: Wrap note update loop in
+	  Gtk.Application.Invoke for thread safety.
+
 2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
 	* Tomboy/SyncManager.cs: Set note revision after updating note XML from
